--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,6 +1,3 @@
-<div>
-  <h1>Child component</h1>
-  <p>please subscribe to this channel {{channelName}}</p>
-  <input type="text" name="" id="" (input)="sendMessageToParent($event)">
-
-</div>
+<h3>Child Component</h3>
+<input type="text" name="" id="" (input)="send($event)">
+<p>Please subscribe to this channel {{valueToParent}}</p>
